chore: add swagger for transfers endpoints
